--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,115 +1,122 @@
 {
-    "cSpell.words": [
-        "adipiscing",
-        "aliqua",
-        "amet",
-        "Appoinment",
-        "Aquí",
-        "atención",
-        "bienestar",
-        "Bienvenido",
-        "Botón",
-        "brindarte",
-        "BUSCADOR",
-        "cada",
-        "calidad",
-        "camino",
-        "caso",
-        "Casos",
-        "Cerrar",
-        "Cifrar",
-        "coincidan",
-        "coinciden",
-        "compromiso",
-        "Conectado",
-        "Conectar",
-        "conexión",
-        "Conexión",
-        "Configuración",
-        "Confirmar",
-        "consectetur",
-        "consulta",
-        "Contactanos",
-        "Contraseña",
-        "contraseñas",
-        "correctamente",
-        "Correo",
-        "Crear",
-        "cuerpo",
-        "cuidado",
-        "Cuidamos",
-        "datos",
-        "Decodificar",
-        "Descomentar",
-        "después",
-        "dolore",
-        "eiusmod",
-        "Ejecutar",
-        "electrónico",
-        "elit",
-        "encontrado",
-        "enim",
-        "enviar",
-        "envío",
-        "errores",
-        "Estadisticas",
-        "esté",
-        "estén",
-        "éxito",
-        "exitosa",
-        "exitoso",
-        "fallida",
-        "Faltan",
-        "falten",
-        "fevicon",
-        "formato",
-        "formulario",
-        "Gynsecology",
-        "incididunt",
-        "incluir",
-        "incorrecta",
-        "Iniciar",
-        "Inicio",
-        "insertar",
-        "inténtalo",
-        "inválido",
-        "labore",
-        "mejor",
-        "Mensaje",
-        "metas",
-        "Método",
-        "mostrar",
-        "necesitas",
-        "Nombre",
-        "nuestra",
-        "nuestro",
-        "Nuevo",
-        "Opcional",
-        "podrías",
-        "porque",
-        "posible",
-        "Preparar",
-        "presentes",
-        "prioridad",
-        "Redirigir",
-        "registrado",
-        "Registrarse",
-        "registro",
-        "Registro",
-        "requeridos",
-        "respuesta",
-        "Respuesta",
-        "salud",
-        "Sesión",
-        "solicitud",
-        "soportado",
-        "teléfono",
-        "Teléfono",
-        "tempor",
-        "usuarios",
-        "Validación",
-        "Validar",
-        "veniam",
-        "Verificar"
-    ]
+  "cSpell.words": [
+    "adipiscing",
+    "aliqua",
+    "amet",
+    "Appoinment",
+    "Aquí",
+    "atención",
+    "bienestar",
+    "Bienvenido",
+    "Botón",
+    "brindarte",
+    "BUSCADOR",
+    "cada",
+    "calidad",
+    "camino",
+    "caso",
+    "Casos",
+    "Cerrar",
+    "Cifrar",
+    "coincidan",
+    "coinciden",
+    "compromiso",
+    "Conectado",
+    "Conectar",
+    "conexión",
+    "Conexión",
+    "Configuración",
+    "Confirmar",
+    "consectetur",
+    "consulta",
+    "Contactanos",
+    "Contraseña",
+    "contraseñas",
+    "correctamente",
+    "Correo",
+    "Crear",
+    "cuerpo",
+    "cuidado",
+    "Cuidamos",
+    "datos",
+    "Decodificar",
+    "Descomentar",
+    "después",
+    "dolore",
+    "eiusmod",
+    "Ejecutar",
+    "electrónico",
+    "elit",
+    "encontrado",
+    "enim",
+    "enviar",
+    "envío",
+    "errores",
+    "Estadisticas",
+    "esté",
+    "estén",
+    "éxito",
+    "exitosa",
+    "exitoso",
+    "fallida",
+    "Faltan",
+    "falten",
+    "fevicon",
+    "formato",
+    "formulario",
+    "Gynsecology",
+    "incididunt",
+    "incluir",
+    "incorrecta",
+    "Iniciar",
+    "Inicio",
+    "insertar",
+    "inténtalo",
+    "inválido",
+    "labore",
+    "mejor",
+    "Mensaje",
+    "metas",
+    "Método",
+    "mostrar",
+    "necesitas",
+    "Nombre",
+    "nuestra",
+    "nuestro",
+    "Nuevo",
+    "Opcional",
+    "podrías",
+    "porque",
+    "posible",
+    "Preparar",
+    "presentes",
+    "prioridad",
+    "Redirigir",
+    "registrado",
+    "Registrarse",
+    "registro",
+    "Registro",
+    "requeridos",
+    "respuesta",
+    "Respuesta",
+    "salud",
+    "Sesión",
+    "solicitud",
+    "soportado",
+    "teléfono",
+    "Teléfono",
+    "tempor",
+    "usuarios",
+    "Validación",
+    "Validar",
+    "veniam",
+    "Verificar"
+  ],
+  "intelephense.files.exclude": [
+    "**/vendor/**",
+    "**/node_modules/**",
+    "**/.vscode/extensions/bmewburn.vscode-intelephense-client-*/**",
+    "**/intelephense/stubs/**"
+  ],
+  "intelephense.environment.phpVersion": "8.0"
 }
