se mejora la interfas del login

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
     "correctamente",
     "Correo",
     "Crear",
+    "cuenta",
     "cuerpo",
     "cuidado",
     "Cuidamos",
@@ -55,6 +56,7 @@
     "Estadisticas",
     "esté",
     "estén",
+    "estilos",
     "éxito",
     "exitosa",
     "exitoso",
@@ -64,6 +66,7 @@
     "fevicon",
     "formato",
     "formulario",
+    "Gestiona",
     "Gynsecology",
     "incididunt",
     "incluir",
@@ -100,6 +103,7 @@
     "respuesta",
     "Respuesta",
     "salud",
+    "sencilla",
     "Sesión",
     "solicitud",
     "soportado",
