--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
     "correctamente",
     "Correo",
     "Crear",
+    "cubrirá",
     "cuenta",
     "cuerpo",
     "cuidado",
@@ -56,6 +57,7 @@
     "Estadisticas",
     "esté",
     "estén",
+    "Estilización",
     "estilos",
     "éxito",
     "exitosa",
@@ -64,10 +66,12 @@
     "Faltan",
     "falten",
     "fevicon",
+    "fondo",
     "formato",
     "formulario",
     "Gestiona",
     "Gynsecology",
+    "imagen",
     "incididunt",
     "incluir",
     "incorrecta",
@@ -99,6 +103,7 @@
     "Registrarse",
     "registro",
     "Registro",
+    "repita",
     "requeridos",
     "respuesta",
     "Respuesta",
