se crea la tabla de Formulario de Activación se crea el formulario correctamente y se le da estilo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,10 +14,14 @@
     "cada",
     "calidad",
     "camino",
+    "Cargar",
     "caso",
     "Casos",
+    "Cedula",
+    "Cédula",
     "Cerrar",
     "Cifrar",
+    "Ciudadanía",
     "coincidan",
     "coinciden",
     "compromiso",
@@ -44,6 +48,7 @@
     "Decodificar",
     "Descomentar",
     "después",
+    "documento",
     "dolore",
     "eiusmod",
     "Ejecutar",
@@ -58,11 +63,13 @@
     "esté",
     "estén",
     "Estilización",
+    "estilo",
     "estilos",
     "existente",
     "éxito",
     "exitosa",
     "exitoso",
+    "Extranjería",
     "fallida",
     "fallido",
     "Faltan",
@@ -73,16 +80,22 @@
     "formulario",
     "Gestiona",
     "Gynsecology",
+    "identidad",
     "imagen",
     "incididunt",
     "incluir",
     "incorrecta",
     "Iniciar",
     "Inicio",
+    "inserción",
     "insertar",
+    "insertará",
+    "Instanciar",
     "inténtalo",
+    "inválida",
     "inválido",
     "labore",
+    "Manejar",
     "mejor",
     "Mensaje",
     "metas",
@@ -93,14 +106,19 @@
     "nuestra",
     "nuestro",
     "Nuevo",
+    "Número",
     "Opcional",
     "pasa",
+    "Permanencia",
+    "Permiso",
     "podrías",
     "porque",
     "posible",
     "Preparar",
     "presentes",
     "prioridad",
+    "Protección",
+    "Recopilar",
     "Redirigir",
     "registrado",
     "Registrarse",
@@ -111,10 +129,13 @@
     "respuesta",
     "Respuesta",
     "salud",
+    "Seleccione",
     "sencilla",
     "Sesión",
     "solicitud",
     "soportado",
+    "Targeta",
+    "Tarjeta",
     "teléfono",
     "Teléfono",
     "tempor",
